--- a/select-me-client/src/components/gallary-view/gallary-view.component.html
+++ b/select-me-client/src/components/gallary-view/gallary-view.component.html
@@ -1,5 +1,5 @@
 
-  <div style="background: black;">
+  <!-- <div style="background: black;">
   <div class="container carousel tooltipped" data-position="bottom" data-delay="50" data-tooltip="Selected Images" id="selected_image_carousel">
     <a class="carousel-item" ><img src="./../../assets/1.JPG"></a>
     <a class="carousel-item" ><img src="./../../assets/2.jpg"></a>
@@ -7,9 +7,9 @@
     <a class="carousel-item" ><img src="./../../assets/4.jpg"></a>
     <a class="carousel-item" ><img src="./../../assets/5.jpg"></a>
       <a class="carousel-item" ><img src="./../../assets/6.jpg"></a>
-  </div>
+  </div> -->
 
-
+  <ngx-gallery [options]="SelectedOptions" [images]="SelectedImage"></ngx-gallery>
 
 
   <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
@@ -33,4 +33,4 @@
 
 </div></div> -->
 
-</div>
+<!-- </div> -->
